resources/awesome-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: awesome-app
  labels:
    app: awesome-app
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    component: awesome-app
