resources/awesome-app-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /awesome/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: awesome-app
                port:
                  name: web
